review done master

--- a/index.ipynb
+++ b/index.ipynb
@@ -32,12 +32,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this lab, you'll \n",
-    "- learn about experiments, outcomes and event space\n",
-    "- will be introduced to probability through the law of relative frequency\n",
-    "- learn about the probability axioms\n",
-    "- learn about the addition law of probability\n",
-    "- learn that where each outcome is equally likely, the probability is equal to number of outcomes in the event space divided by number of outcomes in the sample space "
+    "You will be able to:\n",
+    "\n",
+    "- Learn about experiments, outcomes and event space\n",
+    "- Understand probability through the law of relative frequency\n",
+    "- Learn about the probability axioms\n",
+    "- Learn about the addition law of probability\n",
+    "- Learn that where each outcome is equally likely, the probability is equal to number of outcomes in the event space divided by number of outcomes in the sample space\n"
    ]
   },
   {
@@ -711,22 +712,6 @@
    "metadata": {},
    "source": [
     "In this lab, you got to practice your knowledge on the foundations of probability through working on problems regarding the law of relative frequency, the probability axioms and the addition law of probability."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Sources"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://en.wikipedia.org/wiki/Probability_axioms\n",
-    "\n",
-    "https://www.datacamp.com/community/tutorials/statistics-python-tutorial-probability-1\n"
    ]
   }
  ],
