fixing typos and clarifying event space question

--- a/index.ipynb
+++ b/index.ipynb
@@ -609,7 +609,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a NumPy array te say way as we did this for you in the \"throwing a dice twice\" exercise. It will be quite a bit of typing, as your resulting NumPy array will have a shape (20,6)!"
+    "Create a NumPy array to list the event space, (all the possible permutations of these appointments) the same way as we did this for you in the \"throwing a dice twice\" exercise. It will be quite a bit of typing, as your resulting NumPy array will have a shape (20,6)!"
    ]
   },
   {
