--- a/index.ipynb
+++ b/index.ipynb
@@ -35,7 +35,7 @@
     "You will be able to:\n",
     "\n",
     "- Learn about experiments, outcomes and event space\n",
-    "- Understand probability through the law of relative frequency\n",
+    "- Understand probability through relative frequency\n",
     "- Learn about the probability axioms\n",
     "- Learn about the addition law of probability\n",
     "- Learn that where each outcome is equally likely, the probability is equal to number of outcomes in the event space divided by number of outcomes in the sample space\n"
@@ -52,14 +52,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### a. Let's throw a dice once: formula of Laplace"
+    "#### a. Let's throw a dice once"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, create a set `roll_dice` that holds the sample space."
+    "First, create a set `roll_dice` that holds the sample space of rolling a 6-sided dice once."
    ]
   },
   {
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now use the formule $P(E) = \\dfrac{|E|}{|S|}$ to calculate the probability."
+    "Now use the formula $P(E) = \\dfrac{|E|}{|S|}$ (this formula is called \"Laplace's formula\" and strongly related to the law of relative frequency) to calculate the probability."
    ]
   },
   {
@@ -168,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's repeat this expermient 10 times, then 1000 times, then 1 million times, then 100 million times. \n",
+    "Now, let's repeat this experiment 10 times, then 1000 times, then 1 million times, then 100 million times. \n",
     "You can do this by specifying the argument `size` within the numpy function used above. Store the values in the pre-defined variables below."
    ]
   },
@@ -320,7 +320,7 @@
     "- if we have an event space $E$ and a probability measure $P$, \n",
     "- **and** the three probability axioms are fulfilled, \n",
     "\n",
-    "The third axiom is fairly ad hoc, and you will basically have to deduct from the context whether individual events are independent. It is fairly straightforward, however, that people can not be inhabitants of two continents at the same time, so for now, we will assume that we're good for axiom three.\n",
+    "The third axiom is fairly ad hoc, and you will basically have to deduce from the context whether individual events are independent. It is fairly straightforward, however, that people can not be inhabitants of two continents at the same time, so for now, we will assume that we're good for axiom three.\n",
     "\n",
     "However, we can use the numpy array `continents` to verify if axiom 1 and 2 are fulfilled. Create a function \"axioms\" that returns the message \"We're good!\" if both axiom 1 and 2 are fulfilled, and \"Not quite!\" if that's not the case."
    ]
@@ -408,10 +408,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -454,7 +452,7 @@
    "source": [
     "#### a. What is the probability of throwing a 5 at least once?\n",
     "\n",
-    "First, use sample_dice to get \"True\" values for each time a 5 occurs."
+    "First, use sample_dice to get \"True\" values for each time a 5 occurs. This means that, "
    ]
   },
   {
@@ -465,7 +463,7 @@
    },
    "outputs": [],
    "source": [
-    "set_5 = None"
+    "set_5 = None # Your output should be shape (36, 2) but with booleans instead of numbers"
    ]
   },
   {
@@ -483,7 +481,8 @@
    },
    "outputs": [],
    "source": [
-    "true_5 = None\n",
+    "true_5 = None # Your output should be shape (36,) and have booleans. \n",
+    "              # \"True\" if at least one of the previous pairs was true. Tip: use np.any()\n",
     "print(true_5)"
    ]
   },
@@ -609,7 +608,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a NumPy array to list the event space, (all the possible permutations of these appointments) the same way as we did this for you in the \"throwing a dice twice\" exercise. It will be quite a bit of typing, as your resulting NumPy array will have a shape (20,6)!"
+    "Create a NumPy array of possible outcomes in the same way as we did in the \"throwing a dice twice\" exercise. It will be quite a bit of typing, as your resulting NumPy array will have a shape (20,6)!"
    ]
   },
   {
@@ -705,18 +704,6 @@
    "outputs": [],
    "source": [
     "prob_F_2plus = None\n",
-    "print(F_2plus)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "prob_F_2plus = None\n",
     "print(prob_F_2plus)"
    ]
   },
@@ -797,7 +784,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
