--- a/index.ipynb
+++ b/index.ipynb
@@ -4,61 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to Probability - Lab"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Introduction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now that you know what sets are, we can go on and work with two sets that are of key importance when talking about probability: the event space and the sample space. These two concepts are foundational for calculating probabilities when assuming each event in the event space *has a same probability of happening*. Typical examples are rolling a dice (if the dice is \"fair\", the chance of throwing each number between 1 and 6 is 1/6) and flipping a coin (1/2 heads vs tails). You'll get a better sense of how all of this works in this lab."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Objectives"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Introduction to Probability - Lab\n",
+    "\n",
+    "## Introduction\n",
+    "\n",
+    "Now that you know what sets are, we can go on and work with two sets that are of key importance when talking about probability: the event space and the sample space. These two concepts are foundational for calculating probabilities when assuming each event in the event space *has a same probability of happening*. Typical examples are rolling a dice (if the dice is \"fair\", the chance of throwing each number between 1 and 6 is 1/6) and flipping a coin (1/2 heads vs tails). You'll get a better sense of how all of this works in this lab.\n",
+    "\n",
+    "## Objectives\n",
+    "\n",
     "You will be able to:\n",
     "\n",
     "- Learn about experiments, outcomes and event space\n",
     "- Understand probability through relative frequency\n",
     "- Learn about the probability axioms\n",
     "- Learn about the addition law of probability\n",
-    "- Learn that where each outcome is equally likely, the probability is equal to number of outcomes in the event space divided by number of outcomes in the sample space\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##  Sample space, event space and the law of relative frequency"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### a. Let's throw a dice once"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- Learn that where each outcome is equally likely, the probability is equal to number of outcomes in the event space divided by number of outcomes in the sample space\n",
+    "\n",
+    "\n",
+    "##  Sample space, event space and the law of relative frequency\n",
+    "\n",
+    "#### a. Let's throw a dice once\n",
+    "\n",
     "First, create a set `roll_dice` that holds the sample space of rolling a 6-sided dice once."
    ]
   },
@@ -114,41 +80,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using this formula, it should be clear that the answer is 1/3 or 0.3333....  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### b. Now, let's simulate rolling dice to see how the law of relative frequency works."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As mentioned in the lecture, the law of relative frequency can be used to prove certain probabilities. But how does this work exactly? You're about to find out!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$P(E) = \\lim_{n\\rightarrow\\infty} \\dfrac{S{(n)}}{n}$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As you can see in the formula, the law states that when repeating an experiment $n$ times, where $n$ is very big, and you divide the number of \"good\" outcomes by the sample space (here we call it event E), you get to the probability of the event E. It should be clear that we get a more accurate number for P(E) when $n$ grows."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Using this formula, it should be clear that the answer is 1/3 or 0.3333....  \n",
+    "\n",
+    "#### b. Now, let's simulate rolling dice to see how the law of relative frequency works.\n",
+    "\n",
+    "As mentioned in the lecture, the law of relative frequency can be used to prove certain probabilities. But how does this work exactly? You're about to find out!\n",
+    "\n",
+    "$$P(E) = \\lim_{n\\rightarrow\\infty} \\dfrac{S{(n)}}{n}$$\n",
+    "\n",
+    "As you can see in the formula, the law states that when repeating an experiment $n$ times, where $n$ is very big, and you divide the number of \"good\" outcomes by the sample space (here we call it event E), you get to the probability of the event E. It should be clear that we get a more accurate number for P(E) when $n$ grows.\n",
+    "\n",
     "Let's see how this works. First, let's randomly generate values between 1 and 6. You can use `numpy` (imported as `np`) to generate random integers between 1 and 6 by setting the correct arguments. The `np.random` module is a very useful tool for this. We helped you with the code here, but you'll get more practice and a thorough explanation later on!"
    ]
   },
@@ -235,23 +176,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You see that the probability converges to 0.3333333... for higher values of $n$. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##  The Probability Axioms"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "You see that the probability converges to 0.3333333... for higher values of $n$. \n",
+    "\n",
+    "##  The Probability Axioms\n",
+    "\n",
     "You're working at the United Nations, and want to get a better sense of the world population. \n",
     "\n",
-    "You come across some numbers and find the list of probabilities of being an inhabitant for each of the seven continents (rounded up to 3 digits):"
+    "You come across some numbers and find the list of probabilities of being an inhabitant for each of the seven continents (rounded up to 3 digits):\n",
+    "\n",
+    "- P(Africa) = 0.161\n",
+    "- P(Antarctica) = 0.000\n",
+    "- P(Asia) = 0.598\n",
+    "- P(Europe) = 0.10\n",
+    "- P(North-America) = 0.079\n",
+    "- P(Australia) = 0.005\n",
+    "- P(South-America) = 0.057\n",
+    "\n",
+    "store these values using the variable names below:"
    ]
   },
   {
@@ -392,7 +333,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Great! We tested it and seems like our set `continents` is a true probability space."
+    "Great! We tested it and seems like our set `continents` is a true probability space.\n",
+    "\n",
+    "## Some more practice on the sample and event spaces\n",
+    "\n",
+    "In this exercise, we'll look at possible outcomes when throwing a dice twice. For your convenience, we created the NumPy array below.\n",
+    "\n",
+    "Next, we'll compute a couple or probabilities associated with doing this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "sample_dice = np.array([(1, 1), (1, 2), (1, 3), (1, 4), (1, 5), (1, 6),\n",
+    "              (2, 1), (2, 2), (2, 3), (2, 4), (2, 5), (2, 6),\n",
+    "              (3, 1), (3, 2), (3, 3), (3, 4), (3, 5), (3, 6),\n",
+    "              (4, 1), (4, 2), (4, 3), (4, 4), (4, 5), (4, 6),\n",
+    "              (5, 1), (5, 2), (5, 3), (5, 4), (5, 5), (5, 6),\n",
+    "              (6, 1), (6, 2), (6, 3), (6, 4), (6, 5), (6, 6)])"
    ]
   },
   {
@@ -443,13 +405,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use Python to obtain the following probabilities:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Use Python to obtain the following probabilities:\n",
+    "\n",
     "#### a. What is the probability of throwing a 5 at least once?\n",
     "\n",
     "First, use sample_dice to get \"True\" values for each time a 5 occurs. This means that, "
@@ -594,20 +551,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Now let's try creating your own event space!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A teaching assistant is holding office hours so students can make appointments. She has 6 appointments scheduled today, 3 by male students, and 3 by female students. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Now let's try creating your own event space!\n",
+    "\n",
+    "A teaching assistant is holding office hours so students can make appointments. She has 6 appointments scheduled today, 3 by male students, and 3 by female students. \n",
+    "\n",
     "Create a NumPy array of possible outcomes in the same way as we did in the \"throwing a dice twice\" exercise. It will be quite a bit of typing, as your resulting NumPy array will have a shape (20,6)!"
    ]
   },
@@ -649,13 +596,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1. Calculate the probability that at least 2 out of the first 3 appointments are with female students"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "#### 1. Calculate the probability that at least 2 out of the first 3 appointments are with female students\n",
+    "\n",
     "First, select the first 3 appointment slots and check for \"F\"."
    ]
   },
@@ -729,13 +671,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You noticed that coming up with the sample space was probably the most time-consuming part of the exercise, and it would really become unfeasible to write this down for say, 10 or, even worse, 20 appointments in a row. You'll learn about methods that make this easy in the next lecture!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "You noticed that coming up with the sample space was probably the most time-consuming part of the exercise, and it would really become unfeasible to write this down for say, 10 or, even worse, 20 appointments in a row. You'll learn about methods that make this easy in the next lecture!\n",
+    "\n",
     "## The Addition Law of Probability\n",
     "At a supermarket, we randomly select customers, and make notes of whether a certain customer owns a Visa card (event A) or an Amex credit card (event B). Some customers own both cards.\n",
     "You can assume that:\n",
@@ -750,20 +687,10 @@
     "\n",
     "3) compute the probability that a customer *only* owns VISA card.\n",
     "\n",
-    "(You can use python here, but you don't have to)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Summary"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "(You can use python here, but you don't have to)\n",
+    "\n",
+    "## Summary\n",
+    "\n",
     "In this lab, you got to practice your knowledge on the foundations of probability through working on problems regarding the law of relative frequency, the probability axioms and the addition law of probability."
    ]
   }
