--- a/index.ipynb
+++ b/index.ipynb
@@ -15,16 +15,17 @@
     "You will be able to:\n",
     "\n",
     "- Learn about experiments, outcomes and event space\n",
-    "- Understand probability through the law of relative frequency\n",
+    "- Understand probability through relative frequency\n",
     "- Learn about the probability axioms\n",
     "- Learn about the addition law of probability\n",
     "- Learn that where each outcome is equally likely, the probability is equal to number of outcomes in the event space divided by number of outcomes in the sample space\n",
     "\n",
+    "\n",
     "##  Sample space, event space and the law of relative frequency\n",
     "\n",
-    "#### a. Let's throw a dice once: formula of Laplace\n",
+    "#### a. Let's throw a dice once\n",
     "\n",
-    "First, create a set `roll_dice` that holds the sample space."
+    "First, create a set `roll_dice` that holds the sample space of rolling a 6-sided dice once."
    ]
   },
   {
@@ -60,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now use the formule $P(E) = \\dfrac{|E|}{|S|}$ to calculate the probability."
+    "Now use the formula $P(E) = \\dfrac{|E|}{|S|}$ (this formula is called \"Laplace's formula\" and strongly related to the law of relative frequency) to calculate the probability."
    ]
   },
   {
@@ -608,7 +609,7 @@
     "\n",
     "A teaching assistant is holding office hours so students can make appointments. She has 6 appointments scheduled today, 3 by male students, and 3 by female students. \n",
     "\n",
-    "Create a NumPy array to list the event space, (all the possible permutations of these appointments) the same way as we did this for you in the \"throwing a dice twice\" exercise. It will be quite a bit of typing, as your resulting NumPy array will have a shape (20,6)!"
+    "Create a NumPy array of possible outcomes in the same way as we did in the \"throwing a dice twice\" exercise. It will be quite a bit of typing, as your resulting NumPy array will have a shape (20,6)!"
    ]
   },
   {
