CO 340 Remove references to lecture

--- a/index.ipynb
+++ b/index.ipynb
@@ -93,7 +93,7 @@
     "\n",
     "#### b. Now, let's simulate rolling dice to see how the law of relative frequency works.\n",
     "\n",
-    "As mentioned in the lecture, the law of relative frequency can be used to prove certain probabilities. But how does this work exactly? You're about to find out!\n",
+    "The law of relative frequency can be used to prove certain probabilities. But how does this work exactly? You're about to find out!\n",
     "\n",
     "$$P(E) = \\lim_{n\\rightarrow\\infty} \\dfrac{S{(n)}}{n}$$\n",
     "\n",
@@ -780,7 +780,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You noticed that coming up with the sample space was probably the most time-consuming part of the exercise, and it would really become unfeasible to write this down for say, 10 or, even worse, 20 appointments in a row. You'll learn about methods that make this easy in the next lecture!\n",
+    "You noticed that coming up with the sample space was probably the most time-consuming part of the exercise, and it would really become unfeasible to write this down for say, 10 or, even worse, 20 appointments in a row. You'll learn about methods that make this process easier soon!\n",
     "\n",
     "## The Addition Law of Probability\n",
     "At a supermarket, we randomly select customers, and make notes of whether a certain customer owns a Visa card (event A) or an Amex credit card (event B). Some customers own both cards.\n",
@@ -828,7 +828,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
