--- a/index.ipynb
+++ b/index.ipynb
@@ -8,17 +8,17 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "Now that you know what sets are, we can go on and work with two sets that are of key importance when talking about probability: the event space and the sample space. These two concepts are foundational for calculating probabilities when assuming each event in the event space *has a same probability of happening*. Typical examples are rolling a dice (if the dice is \"fair\", the chance of throwing each number between 1 and 6 is 1/6) and flipping a coin (1/2 heads vs tails). You'll get a better sense of how all of this works in this lab.\n",
+    "Now that you know what sets are, we can go on and work with two sets that are of key importance when talking about probability: the event space and the sample space. These two concepts are foundational for calculating probabilities when assuming each event in the event space *has the same probability of happening*. Typical examples are rolling a dice (if the dice is \"fair\", the chance of throwing each number between 1 and 6 is 1/6) and flipping a coin (1/2 heads vs tails). You'll get a better sense of how all of this works in this lab.\n",
     "\n",
     "## Objectives\n",
     "\n",
     "You will be able to:\n",
     "\n",
-    "- Learn about experiments, outcomes and event space\n",
+    "- Learn about experiments, outcomes, and event space\n",
     "- Understand probability through relative frequency\n",
     "- Learn about the probability axioms\n",
     "- Learn about the addition law of probability\n",
-    "- Learn that where each outcome is equally likely, the probability is equal to number of outcomes in the event space divided by number of outcomes in the sample space\n",
+    "- Learn that when each outcome is equally likely, the probability is equal to number of outcomes in the event space divided by number of outcomes in the sample space\n",
     "\n",
     "\n",
     "##  Sample space, event space and the law of relative frequency\n",
@@ -397,13 +397,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We want to make sure that the three probability axioms are fulfilled, because they assure us that $(\\Omega,E,P)$ is a **probability space**:\n",
+    "We want to make sure that the three probability axioms are fulfilled because they assure us that $(\\Omega,E,P)$ is a **probability space**:\n",
     "\n",
     "- if we have a sample space $S$ (or $\\Omega$)\n",
     "- if we have an event space $E$ and a probability measure $P$, \n",
     "- **and** the three probability axioms are fulfilled, \n",
     "\n",
-    "The third axiom is fairly ad hoc, and you will basically have to deduce from the context whether individual events are independent. It is fairly straightforward, however, that people can not be inhabitants of two continents at the same time, so for now, we will assume that we're good for axiom three.\n",
+    "The third axiom is fairly ad hoc, and you will basically have to deduce from the context whether individual events are independent. It is fairly straightforward, however, that people cannot be inhabitants of two continents at the same time, so for now, we will assume that we're good for axiom three.\n",
     "\n",
     "However, we can use the numpy array `continents` to verify if axiom 1 and 2 are fulfilled. Create a function \"axioms\" that returns the message \"We're good!\" if both axiom 1 and 2 are fulfilled, and \"Not quite!\" if that's not the case."
    ]
@@ -1248,7 +1248,7 @@
    "source": [
     "## Summary\n",
     "\n",
-    "In this lab, you got to practice your knowledge on the foundations of probability through working on problems regarding the law of relative frequency, the probability axioms and the addition law of probability."
+    "In this lab, you got to practice your knowledge on the foundations of probability through working on problems regarding the law of relative frequency, the probability axioms, and the addition law of probability."
    ]
   }
  ],
@@ -1268,7 +1268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
