fixed learning objectives; clarified some language in some questions

--- a/index.ipynb
+++ b/index.ipynb
@@ -14,12 +14,8 @@
     "\n",
     "You will be able to:\n",
     "\n",
-    "- Learn about experiments, outcomes, and event space\n",
-    "- Understand probability through relative frequency\n",
-    "- Learn about the probability axioms\n",
-    "- Learn about the addition law of probability\n",
-    "- Learn that when each outcome is equally likely, the probability is equal to number of outcomes in the event space divided by number of outcomes in the sample space\n",
-    "\n",
+    "* Calculate probabilities by using relative frequency of outcomes to event space\n",
+    "* Use Python to demonstrate the axioms of probability\n",
     "\n",
     "##  Sample space, event space and the law of relative frequency\n",
     "\n",
@@ -85,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now use the formula $P(E) = \\dfrac{|E|}{|S|}$ (this formula is called \"Laplace's formula\" and strongly related to the law of relative frequency) to calculate the probability."
+    "Now use the formula $P(E) = \\dfrac{|E|}{|S|}$ (This formula is called \"Laplace's formula\" and strongly related to the law of relative frequency) to calculate the probability."
    ]
   },
   {
@@ -189,7 +185,7 @@
    },
    "outputs": [],
    "source": [
-    "np.random.seed(12345) # to make sure there is no randomness\n",
+    "np.random.seed(12345) # to ensure reproducibility of results\n",
     "\n",
     "dice_10 = np.random.randint(1,7,size= None)\n",
     "dice_1k = np.random.randint(1,7,size= None)\n",
@@ -206,7 +202,7 @@
    "outputs": [],
    "source": [
     "# __SOLUTION__ \n",
-    "np.random.seed(12345) # to make sure there is no randomness\n",
+    "np.random.seed(12345) # to ensure reproducibility of results\n",
     "\n",
     "dice_10 = np.random.randint(1,7,size=10)\n",
     "dice_1k = np.random.randint(1,7,size=1000)\n",
@@ -218,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "next, let's count the number of \"events\". Remember that an event here is defined as throwing a 5 or a 6. Store them in the values below."
+    "Next, let's count the number of \"events\". Remember that an event here is defined as throwing a 5 or a 6. Store them in the values below."
    ]
   },
   {
@@ -405,7 +401,7 @@
     "\n",
     "The third axiom is fairly ad hoc, and you will basically have to deduce from the context whether individual events are independent. It is fairly straightforward, however, that people cannot be inhabitants of two continents at the same time, so for now, we will assume that we're good for axiom three.\n",
     "\n",
-    "However, we can use the numpy array `continents` to verify if axiom 1 and 2 are fulfilled. Create a function \"axioms\" that returns the message \"We're good!\" if both axiom 1 and 2 are fulfilled, and \"Not quite!\" if that's not the case."
+    "However, we can use the numpy array `continents` to verify if axiom 1 and 2 are fulfilled. Create a function `check_axioms` with a single input, `sample_space`, that returns the message \"We're good!\" if both axiom 1 and 2 are fulfilled, and \"Not quite!\" if that's not the case."
    ]
   },
   {
@@ -443,7 +439,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now test your newly created function out on `continents`"
+    "Now test your newly created function out on the sample space `continents`:"
    ]
   },
   {
@@ -640,7 +636,7 @@
     "\n",
     "#### a. What is the probability of throwing a 5 at least once?\n",
     "\n",
-    "First, use sample_dice to get \"True\" values for each time a 5 occurs. This means that, "
+    "First, use `sample_dice` to get \"True\" values for each time a 5 occurs."
    ]
   },
   {
@@ -651,7 +647,7 @@
    },
    "outputs": [],
    "source": [
-    "set_5 = None # Your output should be shape (36, 2) but with booleans instead of numbers"
+    "set_5 = None # Your output should be an array of shape (36, 2) with booleans instead of numbers"
    ]
   },
   {
@@ -681,8 +677,9 @@
    },
    "outputs": [],
    "source": [
-    "true_5 = None # Your output should be shape (36,) and have booleans. \n",
-    "              # \"True\" if at least one of the previous pairs was true. Tip: use np.any()\n",
+    "true_5 = None # Your output should be an array of shape (36,) and have booleans. \n",
+    "              # You should obtain \"True\" if at least one of the previous pairs was true. \n",
+    "              # Hint: Use np.any()\n",
     "print(true_5)"
    ]
   },
@@ -711,7 +708,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Applying the `sum()` function you can get to the total number of items in the event space. Divide this by the total number in the sample space."
+    "Applying the `sum()` function to this result you can get to the total number of items in the event space. Divide this number by the total number in the sample space to obtain the probability of throwing a 5 at least once."
    ]
   },
   {
@@ -935,7 +932,7 @@
     "\n",
     "A teaching assistant is holding office hours so students can make appointments. She has 6 appointments scheduled today, 3 by male students, and 3 by female students. \n",
     "\n",
-    "Create a NumPy array of possible outcomes in the same way as we did in the \"throwing a dice twice\" exercise. It will be quite a bit of typing, as your resulting NumPy array will have a shape (20,6)!"
+    "Create a NumPy array of all possible orders of three male and three female students in which the teaching assistant can see students by appointment. Create this NumPy array in the same way as we did in the \"throwing a dice twice\" exercise. It will be quite a bit of typing, as your resulting NumPy array will have a shape (20,6)!"
    ]
   },
   {
@@ -1210,20 +1207,20 @@
     "You noticed that coming up with the sample space was probably the most time-consuming part of the exercise, and it would really become unfeasible to write this down for say, 10 or, even worse, 20 appointments in a row. You'll learn about methods that make this process easier soon!\n",
     "\n",
     "## The Addition Law of Probability\n",
-    "At a supermarket, we randomly select customers, and make notes of whether a certain customer owns a Visa card (event A) or an Amex credit card (event B). Some customers own both cards.\n",
+    "At a supermarket, we randomly select customers, and make notes of whether a certain customer owns a Visa card (event A) or an American Express credit card (event B). Some customers own both cards.\n",
     "You can assume that:\n",
     "\n",
     "- P(A) = 0.5\n",
     "- P(B) = 0.4\n",
     "- both A and B = 0.25.\n",
     "\n",
-    "1) compute the probability that a selected customer has at least one credit card.\n",
+    "1) Compute the probability that a selected customer has at least one credit card.\n",
     "\n",
-    "2) compute the probability that a selected customer doesn't own any of the mentioned credit cards.\n",
+    "2) Compute the probability that a selected customer doesn't own any of the mentioned credit cards.\n",
     "\n",
-    "3) compute the probability that a customer *only* owns VISA card.\n",
+    "3) Compute the probability that a customer *only* owns VISA card.\n",
     "\n",
-    "(You can use python here, but you don't have to)\n",
+    "(You can use Python here, but you don't have to)\n",
     "\n"
    ]
   },
@@ -1269,6 +1266,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
